# hyprland-settings

./: .gitignore  Makefile  config_io.cpp  config_writer.hpp  hyprland-settings-gui  ipc_common.hpp  main.cpp  meson.build  style.css  test.txt
.github/workflows/: headless.yml  update_dump.yml
gui/: Makefile  config_io.cpp  config_io.hpp  hyprland-settings-gui  main.cpp  style.css
src/: config_io.cpp  config_io.hpp  config_window.cpp  config_window.hpp  config_window_actions.cpp  config_window_loader.cpp  config_window_views.cpp  main.cpp  style.css
src/core/: models.hpp
src/features/: navigation_feature.cpp  navigation_feature.hpp  settings_controller.cpp  settings_controller.hpp
src/platform/: hyprland_backend.cpp  hyprland_backend.hpp
src/ui/: devices_panel.cpp  devices_panel.hpp  item_models.hpp  keywords_panel.cpp  keywords_panel.hpp  option_name_cell.cpp  option_name_cell.hpp  option_value_editor.cpp  option_value_editor.hpp  variables_panel.cpp  variables_panel.hpp
tests/: hyprland_backend_test.cpp
update/: Makefile  hyprland_settings_dump.txt
